# vulpes.rust

./: Cargo.toml  LICENSE  README.md
main/: Cargo.toml
main/src/: main.rs
vulpes/: Cargo.toml
vulpes/src/: agent.rs  context.rs  lib.rs  protocol.rs  session.rs  tool.rs
vulpes/src/tool/: mod.rs  shell.rs
